#pragma once
#include <list>

class Animacion
{
private:
    /* data */
public:
    Animacion(/* args */) {}
    ~Animacion() {}
};