#pragma once
#include <string>


class Archivo
{
private:
    /* data */
public:
    Archivo(/* args */) {}
    ~Archivo() {}
};