#pragma once
class Estilo
{
private:
    /* data */
public:
    Estilo(/* args */) {}
    ~Estilo() {}
};