#pragma once
class Lienzo
{
private:
    /* data */
public:
    Lienzo(/* args */) {}
    ~Lienzo() {}
};