@startuml Pintor

class Dibujo
{ 
    -lineas : list<string>
    -posicion : Vector
    -velocidad : Vector
    -estilo : Estilo
    +AgregarLinea()
}


class Vector
{
    - posX
    - posY
}


class Archivo
{

    -directorio : string
    +LeerDibujo(Dibujo)
    +LeerAnimacion(Animacion)

}


class Estilo
{
    -colorFondo
    -colorTexto
}


class Animacion
{
    -fotogramas : list<Dibujo>
    -fotogramaActual : int
}


class Lienzo
{
    -dibujos : list<Dibujo>
    -Pintar()
    +AgregarDibujo
}


Dibujo *-- Vector
Archivo o-- Dibujo
Dibujo *--  Estilo
Archivo o-- Animacion
Lienzo o-- Dibujo






@enduml